--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.3.13",
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.17",
+    "babel-plugin-rewire": "^1.0.0-beta-2",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "immutable": "^3.7.6",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2"
   },
   "babel": {
     "presets": [
       "es2015"
+    ],
+    "plugins": [
+      "rewire"
     ]
   }
 }
