--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "chai-immutable": "^1.5.3",
     "immutable": "^3.7.6",
     "mocha": "^2.3.4",
-    "sinon": "^1.17.2"
+    "sinon": "^1.17.2",
+    "socket.io": "^1.3.7"
   },
   "babel": {
     "presets": [
