--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'test/**/*.@(js|jsx)'",
+    "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "",
