--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "test": "mocha 'test/**/*.@(js|jsx)'",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "server": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,9 @@
     "immutable": "^3.7.6",
     "jsdom": "^7.2.1",
     "mocha": "^2.3.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
