--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -23,6 +23,7 @@
     "jsdom": "^7.2.1",
     "mocha": "^2.3.4",
     "react": "^0.14.3",
+    "react-addons-pure-render-mixin": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
