--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -28,7 +28,9 @@
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.0.4",
     "react-router": "^1.0.2",
+    "redux": "^3.0.5",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
