--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -20,17 +20,10 @@
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "history": "^1.13.1",
-    "immutable": "^3.7.6",
     "jsdom": "^7.2.1",
     "mocha": "^2.3.4",
-    "react": "^0.14.3",
-    "react-addons-pure-render-mixin": "^0.14.3",
     "react-addons-test-utils": "^0.14.3",
-    "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
-    "react-redux": "^4.0.4",
-    "react-router": "^1.0.2",
-    "redux": "^3.0.5",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
@@ -39,5 +32,14 @@
       "es2015",
       "react"
     ]
+  },
+  "dependencies": {
+    "immutable": "^3.7.6",
+    "react": "^0.14.3",
+    "react-addons-pure-render-mixin": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.4",
+    "react-router": "^1.0.2",
+    "redux": "^3.0.5"
   }
 }
