--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.4",
     "react-router": "^1.0.2",
-    "redux": "^3.0.5"
+    "redux": "^3.0.5",
+    "socket.io-client": "^1.3.7"
   }
 }
