--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "mocha 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
-    "server": "webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
