--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -19,10 +19,8 @@
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
-    "immutable": "^3.7.6",
     "mocha": "^2.3.4",
-    "sinon": "^1.17.2",
-    "socket.io": "^1.3.7"
+    "sinon": "^1.17.2"
   },
   "babel": {
     "presets": [
@@ -33,6 +31,8 @@
     ]
   },
   "dependencies": {
-    "redux": "^3.0.5"
+    "redux": "^3.0.5",
+    "immutable": "^3.7.6",
+    "socket.io": "^1.3.7"
   }
 }
