--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^4.0.4",
     "react-router": "^1.0.2",
     "redux": "^3.0.5",
-    "socket.io-client": "^1.3.7"
+    "socket.io-client": "^1.3.7",
+    "uuid": "^2.0.1"
   }
 }
