--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "mocha 'test/**/*.@(js|jsx)'",
+    "test": "mocha test/**/*.js test/**/*.jsx",
     "test:watch": "npm run test -- --watch",
     "start": "webpack-dev-server"
   },
@@ -13,17 +13,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^3.1.0",
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
+    "css-loader": "^0.23.1",
     "history": "^1.13.1",
     "jsdom": "^7.2.1",
     "mocha": "^2.3.4",
+    "node-sass": "^3.4.2",
     "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
@@ -34,6 +39,7 @@
     ]
   },
   "dependencies": {
+    "classnames": "^2.2.1",
     "immutable": "^3.7.6",
     "react": "^0.14.3",
     "react-addons-pure-render-mixin": "^0.14.3",
