--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^6.3.17",
     "babel-plugin-rewire": "^1.0.0-beta-2",
     "babel-preset-es2015": "^6.3.13",
+    "babel-rewire-wrapper": "^1.0.1",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "mocha": "^2.3.4",
